--- a/testing.html
+++ b/testing.html
@@ -107,93 +107,95 @@
                         </form>
                     </div>
                     <div class="col col-sm-center col-flex">
-                        <div class=" row ">
-                            <div class="col col-sm-4 ">
-                                <div class="card ">
-                                    <img src="assets/dog_10.jpg " class="card-img-top " alt="... ">
+                        <div class="row">
+                            <div class="col col-sm-4">
+                                <div class="card">
+                                    <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body ">
-                                        <h5 class="card-title ">Max</h5>
-                                        <p class="card-text ">
-                                            <h6>Some quicktitle and make up the bulk of the card's content.</h6>
+                                        <h5 class="card-title">Max</h5>
+                                        <p class="card-text">
+                                            Some quicktitle and make up the bulk of the card's content.
                                         </p>
-                                        <a href="animal.html " class="btn btn-primary btn-block ">Ver</a>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col col-sm-4">
+                                <div class="card">
+                                    <img src="assets/dog_06.jpg" class="card-img-top" alt="... ">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Dante</h5>
+                                        <p class="card-text">
+                                            Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the card title and make up the bulk of the card's content.
+                                        </p>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col col-sm-4 ">
                                 <div class="card ">
-                                    <img src="assets/dog_06.jpg " class="card-img-top " alt="... ">
-                                    <div class="card-body ">
-                                        <h5 class="card-title ">Dante</h5>
-                                        <p class="card-text ">
-                                            <h6>Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the card title and make up the bulk of the card's content.</h6>
+                                    <img src="assets/dog_07.jpg" class="card-img-top" alt="... ">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Clarita</h5>
+                                        <p class="card-text">
+                                            Some quick example tdfdfg dfg dfgdfg dfgfd gext ter wefwef wefew wf we f ewf wef wef ew fe fo build on the card title and make up the bulk of the card's content.
                                         </p>
-                                        <a href="animal.html " class="btn btn-primary btn-block ">Ver</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col col-sm-4 ">
-                                <div class="card ">
-                                    <img src="assets/dog_07.jpg " class="card-img-top " alt="... ">
-                                    <div class="card-body ">
-                                        <h5 class="card-title ">Clarita</h5>
-                                        <p class="card-text ">
-                                            <h6>Some quick example tdfdfg dfg dfgdfg dfgfd gext ter wefwef wefew wf we f ewf wef wef ew fe fo build on the card title and make up the bulk of the card's content.</h6>
-                                        </p>
-                                        <a href="animal.html " class="btn btn-primary btn-block ">Ver</a>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col col-sm-4 ">
+                            <div class="col col-sm-4">
                                 <div class="card ">
-                                    <img src="assets/dog_11.jpg " class="card-img-top " alt="... ">
-                                    <div class="card-body ">
-                                        <h5 class="card-title ">Rosita</h5>
-                                        <p class="card-text ">
-                                            <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci incidunt veniam quibusdam corporis fugit nulla doloribus dolore dolores, ab odit? Quas vitae repellendus reprehenderit, alias maiores numquam
-                                                tenetur quos debitis facilis blanditiis accusantium eligendi quasi rerum perspiciatis dolorem, ut natus earum fuga velit, ullam consequatur quam. Officiis quidem cupiditate ipsum!</h6>
+                                    <img src="assets/dog_11.jpg" class="card-img-top" alt="... ">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Rosita</h5>
+                                        <p class="card-text">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci incidunt veniam quibusdam corporis fugit nulla doloribus dolore dolores, ab odit? Quas vitae repellendus reprehenderit, alias maiores numquam tenetur quos debitis facilis blanditiis accusantium
+                                            eligendi quasi rerum perspiciatis dolorem, ut natus earum fuga velit, ullam consequatur quam. Officiis quidem cupiditate ipsum!
                                         </p>
-                                        <a href="animal.html " class="btn btn-primary btn-block ">Ver</a>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col col-sm-4 ">
+                            <div class="col col-sm-4">
                                 <div class="card ">
-                                    <img src="assets/dog_08.jpg " class="card-img-top " alt="... ">
+                                    <img src="assets/dog_08.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body ">
                                         <h5 class="card-title ">Catalina</h5>
                                         <p class="card-text ">
-                                            <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi maiores pariatur, praesentium dolorem accusantium culpa a reprehenderit libero eius in, ab perspiciatis non consequuntur fugiat quam provident earum
-                                                magni optio quia ipsam qui porro, totam unde? Ipsam quae deleniti ea soluta quia voluptatum similique culpa voluptatibus tempore nesciunt facere porro alias iure nisi dicta nobis non eaque, sit voluptate
-                                                aliquid magnam? Assumenda repudiandae quis necessitatibus nobis? Totam, maiores nihil eveniet tenetur earum, modi officiis dicta perferendis dolore incidunt officia aut.</h6>
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi maiores pariatur, praesentium dolorem accusantium culpa a reprehenderit libero eius in, ab perspiciatis non consequuntur fugiat quam provident earum magni optio quia ipsam qui porro, totam
+                                            unde? Ipsam quae deleniti ea soluta quia voluptatum similique culpa voluptatibus tempore nesciunt facere porro alias iure nisi dicta nobis non eaque, sit voluptate aliquid magnam? Assumenda repudiandae quis
+                                            necessitatibus nobis? Totam, maiores nihil eveniet tenetur earum, modi officiis dicta perferendis dolore incidunt officia aut.
                                         </p>
-                                        <a href="animal.html " class="btn btn-primary btn-block ">Ver</a>
+                                        <a href="animal.html" class="btn btn-primary btn-block ">Ver</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col col-sm-4 ">
                                 <div class="card ">
-                                    <img src="assets/dog_09.jpg " class="card-img-top " alt="... ">
-                                    <div class="card-body ">
+                                    <img src="assets/dog_09.jpg" class="card-img-top" alt="... ">
+                                    <div class="card-body">
                                         <h5 class="card-title ">Juan Carlos</h5>
-                                        <p class="card-text ">
-                                            <h6>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus amet harum vero nulla quibusdam alias dolorum ipsum possimus tempora repudiandae veritatis hic dolorem nemo odio, repellat quo tempore
-                                                dignissimos animi.</h6>
+                                        <p class="card-text">
+                                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus amet harum vero nulla quibusdam alias dolorum ipsum possimus tempora repudiandae veritatis hic dolorem nemo odio, repellat quo tempore dignissimos animi.
                                         </p>
-                                        <a href="animal.html " class="btn btn-primary btn-block ">Ver</a>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="serchVerticalR col col-sm-2 ">
-                        <hr />
-                        <img src="assets/publicidad_01.jpg " class="card-img-top " alt="... ">
-                        <hr />
-                        <img src="assets/publicidad_02.jpg " class="card-img-top " alt="... ">
-                        <hr />
+                    <div class="serchVerticalR col col-sm-2">
+                        <aside>
+                            <hr />
+                            <img src="assets/publicidad_01.jpg" class="card-img-top" alt="... ">
+                            <hr />
+                            <img src="assets/publicidad_02.jpg" class="card-img-top" alt="... ">
+                            <hr />
+                        </aside>
                     </div>
+
                 </div>
             </div>
         </section>
