--- a/testing.html
+++ b/testing.html
@@ -202,12 +202,19 @@
     </main>
 
     <!-- footer -->
-
-
-    <hr />
     <footer>
-
+        <ul class="list-inline">
+            <li><a href="#" class="neon">Article License</a></li>
+            <li><a href="#" class="neon">Terms and Conditions</a></li>
+            <li><a href="#" class="neon">Privacy Policy</a></li>
+            <li><a href="#" class="neon">Contact Form</a></li>
+            <li><a href="#" class="neon">The Book</a></li>
+        </ul>
+        <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com" target="_blank">Luis Besil</a>.
+            <span class="second-line">All Rights Reserved.</span>
+        </p>
     </footer>
+
 </body>
 
 
