--- a/testing.html
+++ b/testing.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-    <!-- Creamos el header con la cabecera de la pagina, en este caso solo tenemos el titulo -->
 
     <header></header>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="63" width="80"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="63"
+                width="80"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
         <div class="menuHorizontal collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
+                    <a class="nav-link" href="list.html">Inicio <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
@@ -37,11 +37,12 @@
                     <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="whishlist.html">Whishlist <span class="sr-only"></span></a>
+                    <a class="nav-link" href="whishlist.html">Lista de deseos <span class="sr-only"></span></a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
             </form>
+            
             <button class="LogIn btn btn-outline-light" type="submit"> LogIn -
                 Register
             </button>
@@ -49,8 +50,9 @@
     </nav>
 
     <div class="logo">
-        <img src="assets/Patitas-01.jpg" class="img-responsive" alt="" title="">
+        <img src="assets/Patitas-01.jpg" class="img-responsive" alt="Logo Patitas" title="Patitas">
         <hr />
+
     </div>
 
     <main>
@@ -64,8 +66,12 @@
                             </p>
                             <hr />
                             <div class="form-group">
-                                <label for="tipo"><p><h6>Tipo</h6></p></label>
-                                <select class="custom-select custom-select-md">    
+                                <label for="tipo">
+                                    <p>
+                                        <h6>Tipo</h6>
+                                    </p>
+                                </label>
+                                <select class="custom-select custom-select-md">
                                     <option selected></option>
                                     <option value="1">Perro</option>
                                     <option value="2">Gato</option>
@@ -126,7 +132,8 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Dante</h5>
                                         <p class="card-text">
-                                            Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the card title and make up the bulk of the card's content.
+                                            Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the card title
+                                            and make up the bulk of the card's content.
                                         </p>
                                         <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
@@ -138,7 +145,9 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Clarita</h5>
                                         <p class="card-text">
-                                            Some quick example tdfdfg dfg dfgdfg dfgfd gext ter wefwef wefew wf we f ewf wef wef ew fe fo build on the card title and make up the bulk of the card's content.
+                                            Some quick example tdfdfg dfg dfgdfg dfgfd gext ter wefwef wefew wf we f ewf
+                                            wef wef ew fe fo build on the card title and make up the bulk of the card's
+                                            content.
                                         </p>
                                         <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
@@ -151,8 +160,12 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Rosita</h5>
                                         <p class="card-text">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci incidunt veniam quibusdam corporis fugit nulla doloribus dolore dolores, ab odit? Quas vitae repellendus reprehenderit, alias maiores numquam tenetur quos debitis facilis blanditiis accusantium
-                                            eligendi quasi rerum perspiciatis dolorem, ut natus earum fuga velit, ullam consequatur quam. Officiis quidem cupiditate ipsum!
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci incidunt
+                                            veniam quibusdam corporis fugit nulla doloribus dolore dolores, ab odit?
+                                            Quas vitae repellendus reprehenderit, alias maiores numquam tenetur quos
+                                            debitis facilis blanditiis accusantium
+                                            eligendi quasi rerum perspiciatis dolorem, ut natus earum fuga velit, ullam
+                                            consequatur quam. Officiis quidem cupiditate ipsum!
                                         </p>
                                         <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
@@ -164,9 +177,15 @@
                                     <div class="card-body ">
                                         <h5 class="card-title ">Catalina</h5>
                                         <p class="card-text ">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi maiores pariatur, praesentium dolorem accusantium culpa a reprehenderit libero eius in, ab perspiciatis non consequuntur fugiat quam provident earum magni optio quia ipsam qui porro, totam
-                                            unde? Ipsam quae deleniti ea soluta quia voluptatum similique culpa voluptatibus tempore nesciunt facere porro alias iure nisi dicta nobis non eaque, sit voluptate aliquid magnam? Assumenda repudiandae quis
-                                            necessitatibus nobis? Totam, maiores nihil eveniet tenetur earum, modi officiis dicta perferendis dolore incidunt officia aut.
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi maiores
+                                            pariatur, praesentium dolorem accusantium culpa a reprehenderit libero eius
+                                            in, ab perspiciatis non consequuntur fugiat quam provident earum magni optio
+                                            quia ipsam qui porro, totam
+                                            unde? Ipsam quae deleniti ea soluta quia voluptatum similique culpa
+                                            voluptatibus tempore nesciunt facere porro alias iure nisi dicta nobis non
+                                            eaque, sit voluptate aliquid magnam? Assumenda repudiandae quis
+                                            necessitatibus nobis? Totam, maiores nihil eveniet tenetur earum, modi
+                                            officiis dicta perferendis dolore incidunt officia aut.
                                         </p>
                                         <a href="animal.html" class="btn btn-primary btn-block ">Ver</a>
                                     </div>
@@ -178,7 +197,10 @@
                                     <div class="card-body">
                                         <h5 class="card-title ">Juan Carlos</h5>
                                         <p class="card-text">
-                                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus amet harum vero nulla quibusdam alias dolorum ipsum possimus tempora repudiandae veritatis hic dolorem nemo odio, repellat quo tempore dignissimos animi.
+                                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus
+                                            amet harum vero nulla quibusdam alias dolorum ipsum possimus tempora
+                                            repudiandae veritatis hic dolorem nemo odio, repellat quo tempore
+                                            dignissimos animi.
                                         </p>
                                         <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
@@ -186,40 +208,25 @@
                             </div>
                         </div>
                     </div>
-                    <div class="serchVerticalR col col-sm-2">
-                        <aside>
-                            <hr />
-                            <img src="assets/publicidad_01.jpg" class="card-img-top" alt="... ">
-                            <hr />
-                            <img src="assets/publicidad_02.jpg" class="card-img-top" alt="... ">
-                            <hr />
-                        </aside>
-                    </div>
-
+                    <aside class="serchVerticalR col col-sm-2">
+                        <hr />
+                        <img src="assets/publicidad_01.jpg" class="card-img-top" alt="... ">
+                        <hr />
+                        <img src="assets/publicidad_02.jpg" class="card-img-top" alt="... ">
+                        <hr />
+                    </aside>
                 </div>
             </div>
         </section>
     </main>
 
+
     <!-- footer -->
     <footer>
-        <ul class="list-inline">
-            <li><a href="#" class="neon">Article License</a></li>
-            <li><a href="#" class="neon">Terms and Conditions</a></li>
-            <li><a href="#" class="neon">Privacy Policy</a></li>
-            <li><a href="#" class="neon">Contact Form</a></li>
-            <li><a href="#" class="neon">The Book</a></li>
-        </ul>
         <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com" target="_blank">Luis Besil</a>.
             <span class="second-line">All Rights Reserved.</span>
         </p>
     </footer>
-
 </body>
-
-
-<style>
-
-</style>
 
 </html>
