--- a/testing.html
+++ b/testing.html
@@ -19,8 +19,8 @@
     <header></header>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="63"
-                width="80"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
+                width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
             </form>
-            
+
             <button class="LogIn btn btn-outline-light" type="submit"> LogIn -
                 Register
             </button>
@@ -181,9 +181,7 @@
                                             pariatur, praesentium dolorem accusantium culpa a reprehenderit libero eius
                                             in, ab perspiciatis non consequuntur fugiat quam provident earum magni optio
                                             quia ipsam qui porro, totam
-                                            unde? Ipsam quae deleniti ea soluta quia voluptatum similique culpa
-                                            voluptatibus tempore nesciunt facere porro alias iure nisi dicta nobis non
-                                            eaque, sit voluptate aliquid magnam? Assumenda repudiandae quis
+                                             repudiandae quis
                                             necessitatibus nobis? Totam, maiores nihil eveniet tenetur earum, modi
                                             officiis dicta perferendis dolore incidunt officia aut.
                                         </p>
@@ -219,7 +217,7 @@
             </div>
         </section>
     </main>
-
+    <!-- fin Main -->
 
     <!-- footer -->
     <footer>
