--- a/animal.html
+++ b/animal.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="Es">
 
 <head>
     <!-- Required meta tags -->
@@ -19,13 +19,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+<header>
 
 
-
-
-
-
-
+</header>
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
@@ -58,8 +55,7 @@
     </nav>
 
     <div class="logo">
-        <img src="assets/Patitas-01.jpg" class="img-responsive" alt="" title="">
-
+        <img src="assets/Patitas-01.jpg" class="img-responsive" alt="Logo Patitas">
     </div>
     <hr />
     </div>
