--- a/newAnimal.html
+++ b/newAnimal.html
@@ -79,7 +79,7 @@
                         <div class="form-group col-md-3">
                             <label for="inputPassword4">Raza</label>
                             <select class="custom-select custom-select-md mb-3">
-                                <option selected>Raza ...</option>
+                                <option selected disabled>Raza ...</option>
                                 <option value="1">Alano</option>
                                 <option value="2">Alaskan Malamute</option>
                                 <option value="3">American Staffordshire Terrier</option>
