--- a/ejercicio_05.html
+++ b/ejercicio_05.html
@@ -18,11 +18,14 @@
 
     <style>
         h1 {
-            background-color: red;
+            color: red;
+            text-align: center;
         }
 
         h1:hover {
-            transition: all 4s 2s color 1s;
+            transition: all 8s ease-in-out, color 2s;
+            text-align: center;
+            color:blue;
         }
     </style>
 </body>
