--- a/animal.html
+++ b/animal.html
@@ -26,15 +26,16 @@
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="63" width="80"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
+                width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="menuHorizontal collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
+                    <a class="nav-link" href="list.html">Inicio <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
@@ -43,14 +44,15 @@
                     <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="whishlist.html">Whishlist <span class="sr-only"></span></a>
+                    <a class="nav-link" href="whishlist.html">Lista de deseos <span class="sr-only"></span></a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
             </form>
+
             <button class="LogIn btn btn-outline-light" type="submit"> LogIn -
-                    Register
-                </button>
+                Register
+            </button>
         </div>
     </nav>
 
