--- a/list.html
+++ b/list.html
@@ -18,7 +18,8 @@
 
     <header></header>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+     <!-- NAVBAR -->
+     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
                 width="70"></span>
         </a>
