--- a/testing.html
+++ b/testing.html
@@ -207,9 +207,9 @@
                     </div>
                     <aside class="serchVerticalR col col-sm-2">
                         <hr />
-                        <img src="assets/publicidad_01.jpg" class="card-img-top" alt="... ">
+                        <img src="assets/publicidad_01.jpg" class="card-img-top" alt="Publicidad Freshpet">
                         <hr />
-                        <img src="assets/publicidad_02.jpg" class="card-img-top" alt="... ">
+                        <img src="assets/publicidad_02.jpg" class="card-img-top" alt="Publicidad alimentos para pet">
                         <hr />
                     </aside>
                 </div>
