--- a/register.html
+++ b/register.html
@@ -61,13 +61,14 @@
     </nav>
 
 
-    <!--FOOTER-->
+
+    <!-- footer -->
     <hr />
     <blockquote class="blockquote"></blockquote>
-    <footer class="blockquote-footer text-center">
-        <div class=footer>
-            <p>Posted by: Luis Besil</p>
-            <p>Contact information: <a href="mailto:l.besil@gmail.com">l.besil@gmail.com</a></p>
+    <footer>
+        <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com" target="_blank">Luis Besil</a>.
+            <span class="second-line">All Rights Reserved.</span>
+        </p>
     </footer>
     </blockquote>
 
