Arreglos varios responsive

--- a/blog.html
+++ b/blog.html
@@ -2,14 +2,15 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
+    <title>blog</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title>blog.html</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <style>
 
@@ -18,12 +19,18 @@
 <body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 
-  
+
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
@@ -71,14 +78,15 @@
         </blockquote>
     </div>
 
-    <hr />
+
     <div class="container">
         <div class="row">
             <div class="col col-9 shadow-lg p-3 mb-5 bg-white rounded">
                 <div class="row">
                     <div class="col col-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid" alt="asdfd" title="asdfasdf">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
+                                    alt="asdfd" title="asdfasdf">
                             </div>
                         </a>
                     </div>
@@ -87,7 +95,9 @@
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
                         <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised words
+                            which don't look even slightly believable.</p>
                     </div>
                 </div>
 
@@ -96,7 +106,8 @@
                 <div class="row">
                     <div class="col col-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid" alt="asdfd" title="asdfasdf">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
+                                    alt="asdfd" title="asdfasdf">
                             </div>
                         </a>
                     </div>
@@ -105,7 +116,9 @@
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
                         <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised words
+                            which don't look even slightly believable.</p>
                     </div>
                 </div>
 
@@ -114,7 +127,8 @@
                 <div class="row">
                     <div class="col col-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid" alt="asdfd" title="asdfasdf">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
+                                    alt="asdfd" title="asdfasdf">
                             </div>
                         </a>
                     </div>
@@ -123,7 +137,9 @@
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
                         <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised words
+                            which don't look even slightly believable.</p>
                     </div>
                 </div>
 
@@ -132,7 +148,8 @@
                 <div class="row">
                     <div class="col col-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid" alt="asdfd" title="asdfasdf">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
+                                    alt="asdfd" title="asdfasdf">
                             </div>
                         </a>
                     </div>
@@ -141,7 +158,9 @@
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
                         <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised words
+                            which don't look even slightly believable.</p>
                     </div>
                 </div>
 
@@ -150,7 +169,8 @@
                 <div class="row">
                     <div class="col col-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
-                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid" alt="asdfd" title="asdfasdf">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
+                                    alt="asdfd" title="asdfasdf">
                             </div>
                         </a>
                     </div>
@@ -159,7 +179,9 @@
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
                         <hr />
-                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised words
+                            which don't look even slightly believable.</p>
                     </div>
                 </div>
             </div>
