--- a/testing.html
+++ b/testing.html
@@ -56,7 +56,7 @@
         <section>
             <div class="container-fluid">
                 <div class="rowPrincipal row">
-                    <div class="serchVerticalL col col-sm-12 col-md-2">
+                    <div class="serchVerticalL col col-2 d-none d-md-block">
                         <form class="form" action="">
                             <p>
                                 <h4>Filtros</h4>
@@ -109,9 +109,9 @@
                             </div>
                         </form>
                     </div>
-                    <div class="col col-sm-12 col-md-8">
+                    <div class="col col-12 col-sm-6 col-md-8">
                         <div class="row">
-                            <div class="col col-sm-12 col-md-4 col-lg-4">
+                            <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
                                 <div class="card">
                                     <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body ">
@@ -123,7 +123,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="co col-sm-12 col-md-4">
+                            <div class="col col-12 col-md-6 col-lg-4">
                                 <div class="card">
                                     <img src="assets/dog_06.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
@@ -136,7 +136,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col col-sm-12 col-md-4 col-lg-4">
+                            <div class="col col-12 col-md-6 col-lg-4">
                                 <div class="card">
                                     <img src="assets/dog_07.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
@@ -151,7 +151,7 @@
                                 </div>
                             </div>
 
-                            <div class="col col-sm-12 col-md-4 col-lg-4">
+                            <div class="col col-12col-md-6 col-lg-4">
                                 <div class="card">
                                     <img src="assets/dog_11.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
@@ -168,7 +168,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col col-sm-12 col-md-4 col-lg-4">
+                            <div class="col col-12 col-md-6 col-lg-4">
                                 <div class="card">
                                     <img src="assets/dog_08.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body ">
@@ -186,7 +186,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col col-sm-12 col-md-4 col-lg-4">
+                            <div class="col col-12 col-md-6 col-lg-4">
                                 <div class="card">
                                     <img src="assets/dog_09.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
@@ -204,7 +204,7 @@
 
                         </div>
                     </div>
-                    <aside class="serchVerticalR col col-sm-12 col-md-2 col-lg-2">
+                    <aside class="serchVerticalR col col-12 col-sm-6 col-md-2 col-lg-2">
                         <hr />
                         <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_01.jpg"
                                 class="card-img-top" alt="... "></a>
