--- a/blog.html
+++ b/blog.html
@@ -81,16 +81,16 @@
 
     <div class="container">
         <div class="row">
-            <div class="col col-9">
+            <div class="col col-12 col-md-9">
                 <div class="row">
-                    <div class="col col-4">
+                    <div class="col col-12 col-md-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
                             <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
                                     alt="asdfd" title="asdfasdf">
                             </div>
                         </a>
                     </div>
-                    <div class="col col-8g-4">
+                    <div class="col col-12 col-md-8">
                         <h5 class="card-title">Hermosos gatitos</h5>
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
@@ -104,15 +104,15 @@
                 <hr />
 
                 <div class="row">
-                    <div class="col col-4">
+                    <div class="col col-12 col-md-4">
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
                             <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
                                     alt="asdfd" title="asdfasdf">
                             </div>
                         </a>
                     </div>
-                    <div class="col col-8">
-                        <h5 class="card-title">Hermosos gatitos</h5>
+                    <div class="col col-12 col-md-8">
+                        <h5 class="card-title">Mis mejores amigos</h5>
                         <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
                                 semanas</small></p>
                         <hr />
@@ -124,7 +124,7 @@
                 <hr />
 
             </div>
-            <div class="col col-3">
+            <div class="col col-12 col-md-3">
                 <h5 class="card-title">Archivo</h5>
                 <ul class="list-group list-group-item-info">
                     <hr />
